Fix line height issue when line breaks in about card

--- a/_sass/_about-card.scss
+++ b/_sass/_about-card.scss
@@ -61,7 +61,7 @@ section.about {
             ul {
               li {
                 font-size: 1.4rem;
-                line-height: 3.4rem;
+                margin-bottom: 1.3rem;
                 display: flex;
                 align-items: center;
 
